--- a/EngInt2/EngInt2/Views/Home/Index.cshtml
+++ b/EngInt2/EngInt2/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
             <p>Id:</p>
             <p>Temperature:</p>
             <p>Umidade relativa do ar:</p>
+            <p>Umidade do solo:</p>
         </div>
         @await Html.PartialAsync("_SensorInfo", Model)
         <p></p>
