--- a/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
+++ b/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
@@ -5,4 +5,5 @@
     <p>@Html.DisplayFor(model => model.Id)</p>
     <p>@Html.DisplayFor(model => model.Temperatura)</p>
     <p>@Html.DisplayFor(model => model.Umidade)</p>
+    <p>@Html.DisplayFor(model => model.UmidadeSolo)</p>
 </div>
