--- a/EngInt2/EngInt2/Views/Home/Index.cshtml
+++ b/EngInt2/EngInt2/Views/Home/Index.cshtml
@@ -30,24 +30,32 @@
     <div class="buttons_commands">
 
         <div class="commandButton">
-            <p class="color-component-w">LED Branco</p>
+            <p class="color-component-w">Sistema de Exaustão (LED Branco)</p>
             Status:<button id="btn_w">@Html.DisplayFor(model => model.Status1)</button>
         </div>
 
         <div class="commandButton">
-            <p class="color-component-y">LED Amarelo</p>
-            Status:<button id="btn_y">@Html.DisplayFor(model => model.Status2)</button>
-        </div>
-
-        <div class="commandButton">
-            <p class="color-component-r">LED Vermelho</p>
+            <p class="color-component-r">Sistema de Iluminação (LED Vermelho)</p>
             Status:<button id="btn_r">@Html.DisplayFor(model => model.Status3)</button>
         </div>
 
         <div class="commandButton">
-            <p class="color-component-g">LED Verde</p>
-            Status:<button id="btn_g">@Html.DisplayFor(model => model.Status4)</button>
+            <p class="color-component-g">Sistema de Ventilação (Ventoinha)</p>
+            <label for="temp">Digite aqui a temperatura mínima para iniciar a ventilação:</label>
+            <input type="number" id="temp" name="temp" /><br />
+            <input type="submit" value="Salvar" id="Salvar_temp" />
+            <p id="mensagemTempOk"></p>
         </div>
+
+        <div>
+            <p class="color-component-y">Sistema de Irrigação (LED Amarelo)</p>
+            <label for="umi">Digite aqui a umidade mínima para iniciar a irrigação:</label>
+            <input type="number" id="umi" name="umi" /><br />
+            <input type="submit" value="Salvar" id="Salvar_umi" />
+            <p id="mensagemUmiOk"></p>
+        </div>
+
+
 
     </div>
 </div>
