--- a/EngInt2/EngInt2/Views/Home/Index.cshtml
+++ b/EngInt2/EngInt2/Views/Home/Index.cshtml
@@ -36,6 +36,16 @@
 
         <div class="commandButton">
             <p class="color-component-r">Sistema de Iluminação (LED Vermelho)</p>
+
+
+            <label for="tempo">Digite aqui o intervalo de tempo para ocorrer a iluminação:</label>
+            <input type="number" id="tempo" name="tempo" /><br />
+            <input type="submit" value="Salvar" id="Salvar_tempo" />
+            <p id="mensagemTempoOk"></p>
+
+            <p></p>
+            <p></p>
+            <p></p>
             Status:<button id="btn_r">@Html.DisplayFor(model => model.Status3)</button>
         </div>
 
