aparentemente, tudo funcionando

--- a/EngInt2/EngInt2/Views/Home/Index.cshtml
+++ b/EngInt2/EngInt2/Views/Home/Index.cshtml
@@ -38,9 +38,17 @@
             <p class="color-component-r">Sistema de Iluminação (LED Vermelho)</p>
 
 
-            <label for="tempo">Digite aqui o intervalo de tempo para ocorrer a iluminação:</label>
-            <input type="number" id="tempo" name="tempo" /><br />
+            <p>Digite aqui o intervalo de tempo para ocorrer a iluminação:</p>
+            <label for="tempoLigado">Ligado:</label>
+            <input type="number" id="tempoLigado" name="tempoLigado" /><br />
+
+            <label for="tempoDesligado">Desligado:</label>
+            <input type="number" id="tempoDesligado" name="tempoDesligado" /><br />
+
+
             <input type="submit" value="Salvar" id="Salvar_tempo" />
+
+
             <p id="mensagemTempoOk"></p>
 
             <p></p>
