--- a/EngInt2/EngInt2/Views/Home/Index.cshtml
+++ b/EngInt2/EngInt2/Views/Home/Index.cshtml
@@ -5,76 +5,63 @@
 }
 
 
-<h2>Informações dos Sensores</h2>
+<h3>Informações dos Sensores</h3>
 <hr />
 
     <div class="environment_conditions_container">
 
         <div class="environment_conditions">
-            <p>Id:</p>
-            <p>Temperature:</p>
+            @*<p>Id:</p>*@
+            <p>Temperatura:</p>
             <p>Umidade relativa do ar:</p>
             <p>Umidade do solo:</p>
         </div>
         @await Html.PartialAsync("_SensorInfo", Model)
         <p></p>
-
     </div>
+    <button id="edit_config" class="btn btn-info btn-xs">Editar configurações</button>
 
-
-<h2>LEDs</h2>
-<hr />
-
-
-<div class="_container">
+<div class="_container box">
     <div class="buttons_commands">
 
         <div class="commandButton">
-            <p class="color-component-w">Sistema de Exaustão (LED Branco)</p>
+            <h3>Sistema de Exaustão (LED Branco)</h3>
             Status:<button id="btn_w">@Html.DisplayFor(model => model.Status1)</button>
         </div>
-
+        <hr />
         <div class="commandButton">
-            <p class="color-component-r">Sistema de Iluminação (LED Vermelho)</p>
-
-
-            <p>Digite aqui o intervalo de tempo para ocorrer a iluminação:</p>
+            <h3 class="color-component-r">Sistema de Iluminação (LED Vermelho)</h3>
+            <p>Digite aqui o intervalo de tempo, em segundos, para ocorrer a iluminação:</p>
             <label for="tempoLigado">Ligado:</label>
-            <input type="number" id="tempoLigado" name="tempoLigado" /><br />
+            <input type="number" id="tempoLigado" name="tempoLigado" class="littleInput" /><br />
 
             <label for="tempoDesligado">Desligado:</label>
-            <input type="number" id="tempoDesligado" name="tempoDesligado" /><br />
+            <input type="number" id="tempoDesligado" name="tempoDesligado" class="littleInput" /><br />
 
 
-            <input type="submit" value="Salvar" id="Salvar_tempo" />
+            <input class="btn btn-success btn-sm" type="submit" value="Salvar" id="Salvar_tempo" />
 
 
             <p id="mensagemTempoOk"></p>
 
-            <p></p>
-            <p></p>
-            <p></p>
-            Status:<button id="btn_r">@Html.DisplayFor(model => model.Status3)</button>
-        </div>
 
+        </div>
+        <hr />
         <div class="commandButton">
-            <p class="color-component-g">Sistema de Ventilação (Ventoinha)</p>
+            <h3 class="color-component-g">Sistema de Ventilação (Ventoinha)</h3>
             <label for="temp">Digite aqui a temperatura mínima para iniciar a ventilação:</label>
-            <input type="number" id="temp" name="temp" /><br />
-            <input type="submit" value="Salvar" id="Salvar_temp" />
+            <input type="number" id="temp" name="temp" class="littleInput" /><br />
+            <input class="btn btn-success btn-sm" type="submit" value="Salvar" id="Salvar_temp" />
             <p id="mensagemTempOk"></p>
         </div>
-
+        <hr />
         <div>
-            <p class="color-component-y">Sistema de Irrigação (LED Amarelo)</p>
+            <h3 class="color-component-y">Sistema de Irrigação (LED Amarelo)</h3>
             <label for="umi">Digite aqui a umidade mínima para iniciar a irrigação:</label>
-            <input type="number" id="umi" name="umi" /><br />
-            <input type="submit" value="Salvar" id="Salvar_umi" />
+            <input type="number" id="umi" name="umi" class="littleInput" /><br />
+            <input class="btn btn-success btn-sm" type="submit" value="Salvar" id="Salvar_umi" />
             <p id="mensagemUmiOk"></p>
         </div>
-
-
-
     </div>
 </div>
 
