--- a/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
+++ b/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
@@ -2,7 +2,7 @@
 
 
 <div id="dataFromSensors">
-    <p>@Html.DisplayFor(model => model.Id)</p>
+    @*<p>@Html.DisplayFor(model => model.Id)</p>*@
     <p>@Html.DisplayFor(model => model.Temperatura)</p>
     <p>@Html.DisplayFor(model => model.Umidade)</p>
     <p>@Html.DisplayFor(model => model.UmidadeSolo)</p>
