--- a/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
+++ b/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
@@ -6,4 +6,11 @@
     <p>@Html.DisplayFor(model => model.Temperatura)</p>
     <p>@Html.DisplayFor(model => model.Umidade)</p>
     <p>@Html.DisplayFor(model => model.UmidadeSolo)</p>
+
+    <p>@Html.DisplayFor(model => model.Status1)</p>
+
+    <p>@Html.DisplayFor(model => model.TemperaturaIniciarVentilacao)</p>
+    <p>@Html.DisplayFor(model => model.UmidadeIniciarIrrigacao)</p>
+    <p>@Html.DisplayFor(model => model.TempoLigado)</p>
+    <p>@Html.DisplayFor(model => model.TempoDesligado)</p>
 </div>
