--- a/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
+++ b/EngInt2/EngInt2/Views/Home/_SensorInfo.cshtml
@@ -10,7 +10,9 @@
     <p>@Html.DisplayFor(model => model.Status1)</p>
 
     <p>@Html.DisplayFor(model => model.TemperaturaIniciarVentilacao)</p>
+    <p>@Html.DisplayFor(model => model.TemperaturaTerminarVentilacao)</p>
     <p>@Html.DisplayFor(model => model.UmidadeIniciarIrrigacao)</p>
+    <p>@Html.DisplayFor(model => model.UmidadeTerminarIrrigacao)</p>
     <p>@Html.DisplayFor(model => model.TempoLigado)</p>
     <p>@Html.DisplayFor(model => model.TempoDesligado)</p>
 </div>
